# Rastreador-do-peixe

./: CMakeLists.txt  Detector  Detector.cpp  Especificações.txt  LICENSE.md  Makefile  README.md  gui.cpp  gui.h  nicfunc.cpp  nicfunc.h  teste  teste.cpp
Detect/: CMakeLists.txt  Detector.cpp
data/: dados.txt
src/: CMakeLists.txt
src/inc/: GUI.h  Slider.h  nicfunc.h
src/include/: Botao.h  GUI.h  Slider.h  Switch.h  nicfunc.h
src/lib/: Botao.cpp  GUI.cpp  Slider.cpp  Switch.cpp  nicfunc.cpp
